# MY_TLD_iMX6Q

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  xg.txt
include/: Communication.h  FerNNClassifier.h  File_Queue.h  Filter_Algorithm.h  Font.h  Frame_Difference_Method.h  Init_dev.h  LKTracker.h  NCC_Track.h  RunLength_Algorithm.h  TLD.h  VPU_Camera.h  Variable_Function.h  Video_CharSuperimposition.h  ipu.h  mxc_ipu_hl_lib.h  mxcfb.h  patchgenerator.h  qsImgLib.h  tld_utils.h  tld_utils.h~  vpu_test.h
src/: Communication.cpp  FerNNClassifier.cpp  File_Queue.cpp  Init_dev.cpp  LKTracker.cpp  NCC_Track.c  TLD.cpp  TLD.cpp~  VPU_Camera.cpp  Variable_Function.cpp  Video_CharSuperimposition.cpp  capture.cpp  enc.cpp  main.cpp  patchgenerator.cpp  run_tld.cpp  tld_utils.cpp  tld_utils.cpp.autosave  tld_utils.cpp~  utils.cpp
